testdata/corset/invalid/range_invalid_05.lisp
;;error:4:13-20:signed term encountered
(defcolumns (X :u16) (Y :u16))

(definrange (- X Y) 16)
